Fixing file naming errors

--- a/penguins.html
+++ b/penguins.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
   <title>Christopher's Zoo - Penguins</title>
-  <link rel="stylesheet" type="text/css" href="css/penguin.css">
+  <link rel="stylesheet" type="text/css" href="css/penguins.css">
 </head>
 <body>
   <h1>Penguins</h1>
-  <img src="img/penguin.jpg" alt="penguin">
+  <img src="img/penguins.jpg" alt="penguins">
   <p>
     Penguins are small short-legged animals that are black on the back and white below. 
     They mostly feast on small fish, especially krill, and are very flightless underwater.  
