Fixing filing issues and image size

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <a href="tiger.html">Tiger<br></a>
     <a href="bear.html">Bear<br></a>
     <a href="giraffe.html">Giraffe<br></a>
-    <a href="penguins.html">Penguin<br></a>
+    <a href="penguins.html">Penguins<br></a>
   </div>
 </body>
