Added zoo image

--- a/bear.html
+++ b/bear.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <head>
   <title>Christopher's Zoo - Bear</title>
-  <link rel="stylesheet" type="text/css" href="css/bear.css">
+  <link rel="stylesheet" type="text/css" href="css/bear.css" />
 </head>
 <body>
   <h1>Bear</h1>
-  <img src="img/bear.jpeg" alt="bear">
+  <img src="img/bear.jpeg" alt="bear" />
   <p>
-    Bears are dog-like carnivores, and are very widespread, appearing in a variety of habitats
-    throughout the Northern Hemisphere.  They are eight feet long and weigh more than a thousand 
-    pounds.  Bears contain nonretractable claws, short tails, and a great sense of smell.
-    Bears can live up to 25 years in the wild.
+    Bears are dog-like carnivores, and are very widespread, appearing in a
+    variety of habitats throughout the Northern Hemisphere. They are eight feet
+    long and weigh more than a thousand pounds. Bears contain nonretractable
+    claws, short tails, and a great sense of smell. Bears can live up to 25
+    years in the wild.
   </p>
 </body>
