--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 <body>
   <h1>Welcome to Christopher's Zoo</h1>
   <h3>Let's see the animals in my zoo:</h3>
+  <img src="zoo.jpeg" alt="zoo" />
   <div class="link">
-    <a href="tiger.html">Tiger<br></a>
-    <a href="bear.html">Bear<br></a>
-    <a href="giraffe.html">Giraffe<br></a>
-    <a href="penguins.html">Penguins<br></a>
+    <a href="tiger.html">Tiger<br /></a>
+    <a href="bear.html">Bear<br /></a>
+    <a href="giraffe.html">Giraffe<br /></a>
+    <a href="penguins.html">Penguins<br /></a>
   </div>
 </body>
