Added zoo image after first failure

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
   <h1>Welcome to Christopher's Zoo</h1>
+  <img src="zoo-entrance.jpg" alt="entrance" />
   <h3>Let's see the animals in my zoo:</h3>
-  <img src="zoo.jpeg" alt="zoo" />
   <div class="link">
     <a href="tiger.html">Tiger<br /></a>
     <a href="bear.html">Bear<br /></a>
