--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Welcome to Christopher's Zoo</h1>
-  <img src="zoo-entrance.jpg" alt="entrance" />
+  <img src="img/zoo-entrance.jpg" alt="entrance" />
   <h3>Let's see the animals in my zoo:</h3>
   <div class="link">
     <a href="tiger.html">Tiger<br /></a>
